[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/effect_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/OutlineFX.gd" type="Script" id=2]
[ext_resource path="res://effects/outline.tres" type="Material" id=3]
[ext_resource path="res://ColorRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://SliderEdit.tscn" type="PackedScene" id=5]

[node name="Outline" index="0" instance=ExtResource( 1 )]
title = "Outline"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.694118, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0.109804, 1 )
script = ExtResource( 2 )

[node name="TextureRect" parent="Viewport" index="0"]
material = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
_sections_unfolded = [ "Custom Constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_bottom = 4
_sections_unfolded = [ "custom_constants" ]

[node name="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer" index="0" instance=ExtResource( 4 )]
margin_right = 128.0
color = Color( 1, 1, 1, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Min"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InnerThresh" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 5 )]
margin_left = 28.0
margin_right = 128.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
_sections_unfolded = [ "Rect", "Size Flags" ]
max_value = 1.0
step_value = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 128.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 26.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Max"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OuterThresh" parent="MarginContainer/VBoxContainer/HBoxContainer2" index="1" instance=ExtResource( 5 )]
margin_left = 30.0
margin_right = 128.0
margin_bottom = 14.0
size_flags_horizontal = 3
_sections_unfolded = [ "Rect", "Size Flags" ]
max_value = 1.0
step_value = 0.001

[connection signal="color_change" from="MarginContainer/VBoxContainer/MarginContainer/ColorRect" to="." method="_on_ColorRect_color_change"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/InnerThresh" to="." method="_on_InnerThresh_value_changed"]
[connection signal="value_changing" from="MarginContainer/VBoxContainer/HBoxContainer/InnerThresh" to="." method="_on_InnerThresh_value_changing"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/OuterThresh" to="." method="_on_OuterThresh_value_changed"]
[connection signal="value_changing" from="MarginContainer/VBoxContainer/HBoxContainer2/OuterThresh" to="." method="_on_OuterThresh_value_changing"]
